--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,22 @@
+@import url(https://fonts.googleapis.com/css?family=Abril+Fatface:regular);
+@import url(https://fonts.googleapis.com/css?family=Montserrat:100,200,300,regular,500,600,700,800,900,100italic,200italic,300italic,italic,500italic,600italic,700italic,800italic,900italic);
+
+:root {
+  --font-montserrat: 'Montserrat', sans-serif;
+  --font-abril: 'Abril Fatface', cursive;
+  --color-main: #242A37;
+  --color-accent: #FF6B08;
+  --color-hover: #f87d2b;
+  --color-grey: #A6ABB9;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  padding: 0;
+  font-family: var(--font-montserrat);
+  color: var(--color-main);
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  -moz-osx-font-smoothing: grayscale;  
 }
 
 code {
